修改消息队列连接方式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-spring.rabbitmq.host=
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=
-spring.rabbitmq.password=
-spring.rabbitmq.publisher-confirms=true
-spring.rabbitmq.virtual-host=/
-server.port=
+fds.rabbitmq.host=
+fds.rabbitmq.username=
+fds.rabbitmq.password=
+server.port=8080
